Fixed Banner Overflow issues

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -1,6 +1,6 @@
 // section style
 .section {
-  @apply py-4 bg-slate-100;
+  @apply py-3 bg-slate-100;
 }
 
 .section_title {
